<resources>
    <string name="app_name">Acadify</string>

    <string name="new_user_signup">New User? <b>SIGN UP</b></string>

    <string name="OpenDrawer">Open Navigation drawer</string>
    <string name="CloseDrawer">lose navigation drawer</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="new_to_eduventure_register">New To Eduventure? <b>Signup</b> </string>
    <string name="already_have_an_account_sign_in">Already have an account? <b>Sign In</b></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="back_button">Back</string>
    <string name="enter_student_id">Enter Your Student Id</string>
    <string name="student_id">Student Id</string>
    <string name="verify">Verify</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send Otp</string>
    <string name="help_message">
        In case you face any difficulty in verifying your student id, kindly contact us.
    </string>
    <string name="need_help">Need Help?</string>

    <string name="create_account">Create an account to continue</string>

    <string name="name">Name</string>
    <string name="enter_name">Enter your name</string>

    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>

    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>

    <string name="sign_up">Sign Up</string>

    <string name="register_title">Acadify</string>
    <string name="register_subtitle">Create an account to continue</string>
    <string name="hint_name">Enter your Name</string>
    <string name="hint_email">Enter your Email</string>
    <string name="hint_password">Enter your Password</string>
    <string name="hint_confirm_password">Confirm your Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="login_title">Acadify</string>
    <string name="login_subtitle">Login your account to continue</string>
    <string name="hint_login_email">Enter your Email</string>
    <string name="hint_login_password">Enter your Password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="anurag_kashyap">Anurag Kashyap</string>
    <string name="hello">Hello</string>
    <string name="todo">TODO</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="profile_title">Profile</string>
    <string name="sample_full_name">Full Name</string>
    <string name="sample_email">anurag@kashyap.com</string>
    <string name="sample_uid">123456789123</string>
    <string name="sample_phone">+917091767371</string>
    <string name="label_country">Country</string>
    <string name="label_state">State</string>
    <string name="label_city">City</string>
    <string name="not_available">N/A</string>
    <string name="label_address">Address</string>
    <string name="label_registration_no">Registration No</string>
    <string name="label_dob">DOB</string>
    <string name="label_father_name">Father Name</string>
    <string name="label_mother_name">Mother Name</string>
    <string name="label_branch">Branch</string>
    <string name="label_semester">Semester</string>
    <string name="label_session">Session</string>
    <string name="label_seat_type">Seat Type</string>
    <string name="label_hostler">Hostler</string>
    <string name="sample_data">20033440008</string>
    <string name="sample_dob">dd/MM/yyyy</string>


    <!-- Profile Edit Screen -->
    <string name="profile_edit_title">Profile</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Phone</string>
    <string name="label_district">District</string>
    <string name="label_complete_address">Complete Address</string>
    <string name="btn_update">Update</string>


    <string name="back">Back</string>

    <string name="upload_material">Upload Material</string>

    <string name="add_study_material">Add Study Material</string>

    <string name="share_resources">
        Share resources with your students easily.
    </string>

    <string name="tap_select_pdf">
        Tap to select PDF file
    </string>

    <string name="subject_name">Subject Name</string>

    <string name="chapter_topic">Chapter / Topic</string>

    <string name="semester">Semester</string>

    <string name="branch">Branch</string>

    <string name="confirm_upload">
        Confirm and Upload
    </string>

    <string name="pdf_icon">PDF Icon</string>


</resources>